--- a/index.html
+++ b/index.html
@@ -4,114 +4,127 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiona's Farm</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Fiona's Farm
-Fresh from our farm to your family table
+    <header>
+        <h1>Fiona's Farm</h1>
+        <p>Fresh from our farm to your family table</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#fruits">Fruits</a></li>
+            <li><a href="#vegetables">Vegetables</a></li>
+            <li><a href="#">Top</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="fruits">
+            <h2>Fruits</h2>
+            <p>Welcome to our farm, where we take pride in growing a variety of delicious and nutritious fruits. Our commitment to sustainable farming practices ensures that every bite of our fruit is bursting with natural flavor and goodness. From the orchard to your table, we offer a selection of fresh, hand-picked fruits that are perfect for snacking, baking, and cooking. Experience the taste of nature's bounty with our premium quality fruits.</p>
+            <h3>Fruits for Sale</h3>
 
-Fruits
-Vegetables
-Top
+            <img src="images/apples.png" alt="red apple">
+            <p>Apples</p>
 
-Fruits
-Welcome to our farm, where we take pride in growing a variety of delicious and nutritious fruits. Our commitment to sustainable farming practices ensures that every bite of our fruit is bursting with natural flavor and goodness. From the orchard to your table, we offer a selection of fresh, hand-picked fruits that are perfect for snacking, baking, and cooking. Experience the taste of nature's bounty with our premium quality fruits.
+            <img src="images/oranges.png" alt="oranges">
+            <p>Oranges</p>
 
-Fruits for Sale
-(image)
-Apples
+            <img src="images/peaches.png" alt="peach">
+            <p>Peaches</p>
 
-(image)
-Oranges
+            <img src="images/strawberries.png" alt="strawberries">
+            <p>Strawberries</p>
 
-(image)
-Peaches
+            <img src="images/blueberries.png" alt="blueberries">
+            <p>Blueberries</p>
 
-(image)
-Strawberries
+            <img src="images/raspberries.png" alt="raspberries">
+            <p>Raspberries</p>
 
-(image)
-Blueberries
+            <img src="images/cherries.png" alt="cherries">
+            <p>Cherries</p>
 
-(image)
-Raspberries
+            <img src="images/pears.png" alt="pears">
+            <p>Pears</p>
 
-(image)
-Cherries
+            <img src="images/plums.png" alt="plums">
+            <p>Plums</p>
 
-(image)
-Pears
+            <img src="images/grapes.png" alt="grapes">
+            <p>Grapes</p>
 
-(image)
-Plums
+            <img src="images/watermelons.png" alt="sliced watermelon">
+            <p>Watermelons</p>
 
-(image)
-Grapes
+            <img src="images/cantalopes.png" alt="cantaloupes">
+            <p>Cantaloupes</p>
+        </section>
 
-(image)
-Watermelons
+        <section id="vegetables">
+            <h2>Vegetables</h2>
+            <p>At our farm, we are dedicated to growing a diverse array of vegetables that are both healthy and delicious. Our vegetables are cultivated using sustainable and eco-friendly methods to ensure the highest quality and flavor. Whether you are looking to create a fresh salad, cook a hearty meal, or simply enjoy a nutritious snack, our farm-fresh vegetables are the perfect choice. Taste the difference of locally grown produce with our vibrant and wholesome vegetables.</p>
+            <h3>Vegetables for Sale</h3>
 
-(image)
-Cantaloupes
+            <img src="images/broccoli.png" alt="broccoli">
+            <p>Broccoli</p>
 
+            <img src="images/lettuce.png" alt="lettuce">
+            <p>Lettuce</p>
 
-Vegetables
-At our farm, we are dedicated to growing a diverse array of vegetables that are both healthy and delicious. Our vegetables are cultivated using sustainable and eco-friendly methods to ensure the highest quality and flavor. Whether you are looking to create a fresh salad, cook a hearty meal, or simply enjoy a nutritious snack, our farm-fresh vegetables are the perfect choice. Taste the difference of locally grown produce with our vibrant and wholesome vegetables.
+            <img src="images/eggplant.png" alt="eggplants">
+            <p>Eggplant</p>
 
-Vegetables for Sale
+            <img src="images/spinach.png" alt="spinach leaf">
+            <p>Spinach</p>
 
-(image)
-Broccoli
+            <img src="images/bean-sprout.png" alt="bean sprout">
+            <p>Bean Sprout</p>
 
-(image)
-Lettuce
+            <img src="images/peas.png" alt="snap pea">
+            <p>Peas</p>
 
-(image)
-Eggplant
+            <img src="images/bell-pepper.png" alt="red bell pepper">
+            <p>Bell Pepper</p>
 
-(image)
-Spinach
+            <img src="images/carrot.png" alt="carrot">
+            <p>Carrot</p>
 
-(image)
-Bean Sprout
+            <img src="images/potato.png" alt="potatoes">
+            <p>Potato</p>
 
-(image)
-Peas
+            <img src="images/cucumber.png" alt="cucumber">
+            <p>Cucumber</p>
 
-(image)
-Bell Pepper
+            <img src="images/tomato.png" alt="tomato">
+            <p>Tomato</p>
 
-(image)
-Carrot
+            <img src="images/radish.png" alt="radish">
+            <p>Radish</p>
+        </section>
+    
+    </main>
+    <footer>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>1234 Fake Street,</p>
+            <p>Mesa, AZ 85111</p>
+            <p>(480) 555-1234</p>
+        </section>
 
-(image)
-Potato
+        <section id="hours">
+            <h2>Hours</h2>
+            <p>Monday Closed</p>
+            <p>Tuesday 6:00 AM - 2:00PM</p>
+            <p>Wednesday 6:00 AM - 2:00PM</p>
+            <p>Thursday 6:00 AM - 2:00PM</p>
+            <p>Friday 6:00 AM - 9:00PM</p>
+            <p>Saturday 6:00 AM - 9:00PM</p>
+            <p>Sunday 6:00 AM - 5:00PM</p>      
+        </section>
 
-(image)
-Cucumber
+        <small>Copyright 2024</small>
 
-(image)
-Tomato
-
-(image)
-Radish
-
-
-Contact
-1234 Fake Street,
-Mesa, AZ 85111
-(480) 555-1234
-
-Hours
-Monday Closed
-Tuesday 6:00 AM - 2:00PM
-Wednesday 6:00 AM - 2:00PM
-Thursday 6:00 AM - 2:00PM
-Friday 6:00 AM - 9:00PM
-Saturday 6:00 AM - 9:00PM
-Sunday 6:00 AM - 5:00PM
-
-Copyright 2024
-
-
+    </footer>
 </body>
 </html>
