--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="top">
         <h1>Fiona's Farm</h1>
         <p>Fresh from our farm to your family table</p>
     </header>
@@ -15,116 +15,145 @@
         <ul>
             <li><a href="#fruits">Fruits</a></li>
             <li><a href="#vegetables">Vegetables</a></li>
-            <li><a href="#">Top</a></li>
+            <li><a href="#top" id="top-button">Top</a></li>
         </ul>
     </nav>
     <main>
         <section id="fruits">
             <h2>Fruits</h2>
             <p>Welcome to our farm, where we take pride in growing a variety of delicious and nutritious fruits. Our commitment to sustainable farming practices ensures that every bite of our fruit is bursting with natural flavor and goodness. From the orchard to your table, we offer a selection of fresh, hand-picked fruits that are perfect for snacking, baking, and cooking. Experience the taste of nature's bounty with our premium quality fruits.</p>
-            <h3>Fruits for Sale</h3>
-
-            <img src="images/apples.png" alt="red apple">
-            <p>Apples</p>
-
-            <img src="images/oranges.png" alt="oranges">
-            <p>Oranges</p>
-
-            <img src="images/peaches.png" alt="peach">
-            <p>Peaches</p>
-
-            <img src="images/strawberries.png" alt="strawberries">
-            <p>Strawberries</p>
-
-            <img src="images/blueberries.png" alt="blueberries">
-            <p>Blueberries</p>
-
-            <img src="images/raspberries.png" alt="raspberries">
-            <p>Raspberries</p>
-
-            <img src="images/cherries.png" alt="cherries">
-            <p>Cherries</p>
-
-            <img src="images/pears.png" alt="pears">
-            <p>Pears</p>
-
-            <img src="images/plums.png" alt="plums">
-            <p>Plums</p>
-
-            <img src="images/grapes.png" alt="grapes">
-            <p>Grapes</p>
-
-            <img src="images/watermelons.png" alt="sliced watermelon">
-            <p>Watermelons</p>
-
-            <img src="images/cantalopes.png" alt="cantaloupes">
-            <p>Cantaloupes</p>
+            <section class="sale-items">
+                <h3>Fruits for Sale</h3>
+                <figure>
+                    <img src="images/apples.png" alt="red apple">
+                    <p>Apples</p>
+                </figure>
+                <figure>
+                    <img src="images/oranges.png" alt="oranges">
+                    <p>Oranges</p>
+                </figure>
+                <figure>
+                    <img src="images/peaches.png" alt="peach">
+                    <p>Peaches</p>
+                </figure>
+                <figure>
+                    <img src="images/strawberries.png" alt="strawberries">
+                    <p>Strawberries</p>
+                </figure>
+                <figure>
+                    <img src="images/blueberries.png" alt="blueberries">
+                    <p>Blueberries</p>
+                </figure>
+                <figure>
+                    <img src="images/raspberries.png" alt="raspberries">
+                    <p>Raspberries</p>
+                </figure>
+                <figure>
+                    <img src="images/cherries.png" alt="cherries">
+                    <p>Cherries</p>
+                </figure>
+                <figure>
+                    <img src="images/pears.png" alt="pears">
+                    <p>Pears</p>
+                </figure>
+                <figure>
+                    <img src="images/plums.png" alt="plums">
+                    <p>Plums</p>
+                </figure>
+                <figure>
+                    <img src="images/grapes.png" alt="grapes">
+                    <p>Grapes</p>
+                </figure>
+                <figure>
+                    <img src="images/watermelons.png" alt="sliced watermelon">
+                    <p>Watermelons</p>
+                </figure>
+                <figure>
+                    <img src="images/cantalopes.png" alt="cantaloupes">
+                    <p>Cantaloupes</p>
+                </figure>
+            </section>  
         </section>
 
         <section id="vegetables">
             <h2>Vegetables</h2>
             <p>At our farm, we are dedicated to growing a diverse array of vegetables that are both healthy and delicious. Our vegetables are cultivated using sustainable and eco-friendly methods to ensure the highest quality and flavor. Whether you are looking to create a fresh salad, cook a hearty meal, or simply enjoy a nutritious snack, our farm-fresh vegetables are the perfect choice. Taste the difference of locally grown produce with our vibrant and wholesome vegetables.</p>
-            <h3>Vegetables for Sale</h3>
-
-            <img src="images/broccoli.png" alt="broccoli">
-            <p>Broccoli</p>
-
-            <img src="images/lettuce.png" alt="lettuce">
-            <p>Lettuce</p>
-
-            <img src="images/eggplant.png" alt="eggplants">
-            <p>Eggplant</p>
-
-            <img src="images/spinach.png" alt="spinach leaf">
-            <p>Spinach</p>
-
-            <img src="images/bean-sprout.png" alt="bean sprout">
-            <p>Bean Sprout</p>
-
-            <img src="images/peas.png" alt="snap pea">
-            <p>Peas</p>
-
-            <img src="images/bell-pepper.png" alt="red bell pepper">
-            <p>Bell Pepper</p>
-
-            <img src="images/carrot.png" alt="carrot">
-            <p>Carrot</p>
-
-            <img src="images/potato.png" alt="potatoes">
-            <p>Potato</p>
-
-            <img src="images/cucumber.png" alt="cucumber">
-            <p>Cucumber</p>
-
-            <img src="images/tomato.png" alt="tomato">
-            <p>Tomato</p>
-
-            <img src="images/radish.png" alt="radish">
-            <p>Radish</p>
+            <section class="sale-items">
+                <h3>Vegetables for Sale</h3>
+                <figure>
+                    <img src="images/broccoli.png" alt="broccoli">
+                    <p>Broccoli</p>
+                </figure>
+                <figure>
+                    <img src="images/lettuce.png" alt="lettuce">
+                    <p>Lettuce</p>
+                </figure>
+                <figure>
+                    <img src="images/eggplant.png" alt="eggplants">
+                    <p>Eggplant</p>
+                </figure>
+                <figure>
+                    <img src="images/spinach.png" alt="spinach leaf">
+                    <p>Spinach</p>
+                </figure>
+                <figure>
+                    <img src="images/bean-sprout.png" alt="bean sprout">
+                    <p>Bean Sprout</p>
+                </figure>
+                <figure>
+                    <img src="images/peas.png" alt="snap pea">
+                    <p>Peas</p>
+                </figure>
+                <figure>
+                    <img src="images/bell-pepper.png" alt="red bell pepper">
+                    <p>Bell Pepper</p>
+                </figure>
+                <figure>
+                    <img src="images/carrot.png" alt="carrot">
+                    <p>Carrot</p>
+                </figure>
+                <figure>
+                    <img src="images/potato.png" alt="potatoes">
+                    <p>Potato</p>
+                </figure>
+                <figure>
+                    <img src="images/cucumber.png" alt="cucumber">
+                    <p>Cucumber</p>
+                </figure>
+                <figure>
+                    <img src="images/tomato.png" alt="tomato">
+                    <p>Tomato</p>
+                </figure>
+                <figure>
+                    <img src="images/radish.png" alt="radish">
+                    <p>Radish</p>
+                </figure>
+            </section>
         </section>
-    
     </main>
+
     <footer>
         <section id="contact">
             <h2>Contact</h2>
-            <p>1234 Fake Street,</p>
-            <p>Mesa, AZ 85111</p>
-            <p>(480) 555-1234</p>
+            <p>1234 Fake Street,<br>
+                Mesa, AZ 85111<br>
+                (480) 555-1234</p>
         </section>
 
         <section id="hours">
             <h2>Hours</h2>
-            <p>Monday Closed</p>
-            <p>Tuesday 6:00 AM - 2:00PM</p>
-            <p>Wednesday 6:00 AM - 2:00PM</p>
-            <p>Thursday 6:00 AM - 2:00PM</p>
-            <p>Friday 6:00 AM - 9:00PM</p>
-            <p>Saturday 6:00 AM - 9:00PM</p>
-            <p>Sunday 6:00 AM - 5:00PM</p>      
+            <p>Monday : Closed<br>
+                Tuesday : 6:00 AM - 2:00 PM<br>
+                Wednesday : 6:00 AM - 2:00 PM<br>
+                Thursday : 6:00 AM - 2:00 PM<br>
+                Friday : 6:00 AM - 9:00 PM<br>
+                Saturday : 6:00 AM - 9:00 PM<br>
+                Sunday : 6:00 AM - 5:00 PM</p>
         </section>
 
-        <small>Copyright 2024</small>
-
+        <div>
+            <small>Copyright 2024</small>
+        </div>
     </footer>
 </body>
 </html>
